# Cobra

./: .gitignore  AGENTS.md  README.md  cobra-pkg.json  pyproject.toml
cobra/cli/: cobra.py  cobrac.py  cobraos.py  cobrapkg.py
cobra/compiler/: ast.py  codegen.py  codegen_c.py  lexer.py  parser.py
cobra/os/: deploy.py
cobra/pkgmgr/: manager.py
cobra/runtime/: __init__.py  builtins.py
cobra/stdlib/: datetime.py  filesystem.py  json_.py  math.py  os.py  string.py
docs/: cli.md  deployment.md  language.md  stdlib.md  system-changes.md
examples/: cobraos-init.cobra  edge_cases.cobra  features.cobra  hello.cobra  json_demo.cobra  neofetch.cobra  numeric.cobra  stdlib_demo.cobra
scripts/: deploy.sh  tunnel.sh
